[package]
name = "azul-dom"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "DOM definition for the Azul GUI framework"
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics", "style" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"

[dependencies]
azul-css                = { version = "0.1.0", path = "../azul-css" }
# TODO: Necessary for GlCallback - replace later with normal trait aroung GL texture ID!
azul_glium              = { version = "0.22.0",               default-features = false, features = ["glutin"] }
