[package]
name = "azul-widgets"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Contains the default widgets for azul, such as text fields, buttons, etc."
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"

[dependencies]
azul-css                = { version = "0.1.0", path = "../azul-css" }
azul-dom                = { version = "0.1.0", path = "../azul-dom" }
